k8s/wordpress/wordpress-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-http
  namespace: wordpress
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`web.etna.student`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-https
  namespace: wordpress
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`web.etna.student`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: letsencrypt
